tests/errors/ScalarRedeclared.imp
VAR
  a a
BEGIN
  a := 12;
END
